Fix arrow icon alignment

--- a/indico/web/client/styles/partials/_sidebars.scss
+++ b/indico/web/client/styles/partials/_sidebars.scss
@@ -60,6 +60,7 @@
     .title-wrapper {
       @include icon-before('icon-arrow-down');
       display: flex;
+      align-items: center;
       cursor: pointer;
 
       &::before {
